# LanguageServer.quark

./: BaseDocument.sc  CodeFormatter.sc  JSON.sc  LSP.sc  LSPCompletionHandler.sc  LSPDatabase.sc  LSPDocument.sc  LSPFeature.sc  LSPSCDocMarkdownRenderer.sc  LanguageServer.quark  extString.sc
CompletionHandlers/: LSPCompletionHandler_classMethod.sc  LSPCompletionHandler_className.sc  LSPCompletionHandler_environmentVariable.sc  LSPCompletionHandler_method.sc  LSPCompletionHandler_singleton.sc
Notifications/: ServerStatusNotification.sc
Providers/: CmdPeriod.sc  CodeActionProvider.sc  CodeLensProvider.sc  DocumentSymbolProvider.sc  DocumentationSearchProvider.sc  DynamicProvider.sc  EvaluateCommandProvider.sc  EvaluateProvider.sc  ExecuteCommandProvider.sc  ExecuteProvider.sc  FindReferencesProvider.sc  FoldingRangeProvider.sc  GotoDeclarationProvider.sc  GotoDefinitionProvider.sc  GotoImplementationProvider.sc  HoverProvider.sc  InitializeProvider.sc  SelectionRangeProvider.sc  ShutdownProvider.sc  SignatureHelpProvider.sc  TextDocumentCompletionProvider.sc  TextDocumentFormattingProvider.sc  TextDocumentProvider.sc  WorkspaceSymbol.sc
Requests/: ShowDocumentRequest.sc  WorkspaceConfigurationRequest.sc
SystemOverrides/: extServer.sc
Test/: LSP-test-classmethod-handler.scd  LSP-test-envvar-handler.scd  LSP-test-method-handler.scd  LSP-test-singleton-handler.scd  LSP-test.scd  SampleDoc.schelp  SampleDoc_expected.md  TestLSPSCDocMarkdownRenderer.sc
sc_language_server/: README.md  main.py  pyproject.toml  requirements.dev.txt  sc_language_server.py  setup.cfg
(+1 files in other folders)
