[project]
name = "sc-language-server"
version = "0.1.0"
description = "A sdtio wrapper for the LanguageServer.quark LSP server for SuperCollider"
requires-python = ">= 3.11"

[project.scripts]
sc-language-server = "sc_language_server:main"

[tool.isort]
profile = 'black'

[tool.black]
line-length = 110
